--- a/.github/workflows/cancel.yml
+++ b/.github/workflows/cancel.yml
@@ -1,34 +1,17 @@
-name: CI
-
-on: [push, pull_request]
+name: Cancel
+on:
+  pull_request_target:
+    types:
+      - edited
+      - synchronize
 
 jobs:
-  check-lint:
-    name: Check fmt with Prettier
+  cancel:
+    name: "Cancel Previous Runs"
     runs-on: ubuntu-latest
+    timeout-minutes: 3
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
+      - uses: styfle/cancel-workflow-action@0.9.1
         with:
-          node-version: 18
-
-      - name: Install Dependencies
-        run: yarn
-
-      - name: Check Lint
-        run: yarn lint
-
-  check-test:
-    name: Check Test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 18
-
-      - name: Install Dependencies
-        run: yarn
-
-      - name: Test Program
-        run: yarn test
+          workflow_id: 47043698
+          access_token: ${{ github.token }}
