--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "cloud-spanner-orm"
   ],
   "devDependencies": {
+    "@sap/hana-client": "^2.15.19",
     "@types/app-root-path": "^1.2.4",
     "@types/chai": "^4.2.15",
     "@types/chai-as-promised": "^7.1.3",
@@ -120,6 +121,7 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
     "gulpclass": "^0.2.0",
+    "hdb-pool": "^0.1.6",
     "husky": "^5.1.1",
     "mocha": "^8.3.0",
     "mongodb": "^3.6.4",
