--- a/test/functional/ormconfigs/all/ormconfig.env
+++ b/test/functional/ormconfigs/all/ormconfig.env
@@ -1,5 +1,5 @@
-TYPEORM_HOST = localhost
-TYPEORM_USERNAME = root
-TYPEORM_PASSWORD = admin
-TYPEORM_PORT = 3000
-TYPEORM_LOGGING = true
+LAPIN_HOST = localhost
+LAPIN_USERNAME = root
+LAPIN_PASSWORD = admin
+LAPIN_PORT = 3000
+LAPIN_LOGGING = true
