--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,10 +3,10 @@ name: CI
 on:
   pull_request:
     branches:
-      - '*'
+      - "*"
   push:
     branches:
-      - 'main'
+      - "main"
 jobs:
   check-lint:
     name: Check fmt with Prettier
@@ -39,4 +39,4 @@ jobs:
         run: yarn
 
       - name: Test Program
-        run: yarn test
+        run: yarn test-all
